# Alien-Base-Extras

./: .appveyor.yml  .gitignore  .travis-install-system.sh  .travis.yml  README  gen-dontpanic.pl  gen-dontpanic.sh
Acme-Alien-DontPanic/: Build.PL  Changes  MANIFEST  MANIFEST.SKIP  META.json  META.yml  README
Acme-Alien-DontPanic/lib/Acme/Alien/: DontPanic.pm
Acme-Alien-DontPanic/t/: 00-use.t  eud.t  ffi.t  static_link.t  xs.t
Acme-Alien-DontPanic/t/static_link/: main.c
Acme-Ford-Prefect/: Build.PL  Changes  MANIFEST  MANIFEST.SKIP  META.json  META.yml  README
Acme-Ford-Prefect/lib/Acme/Ford/: Prefect.pm
Acme-Ford-Prefect/t/: answer.t  dontpanic_packlist.t
Alien-DontPanic/: Build.PL  MANIFEST
Ford-Prefect/: Build.PL
dontpanic/: Makefile.am  autoclean.sh  configure.ac
dontpanic/src/: Makefile.am  dontpanic.pc.in  libdontpanic.h  main.c
