#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([libdontpanic], [1.0], [joel.a.berger@gmail.com])
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([src/libdontpanic.h])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.


LT_INIT
AM_INIT_AUTOMAKE

AC_CONFIG_FILES([src/Makefile Makefile])
AC_OUTPUT


